k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prayer-times-app
  labels:
    app.kubernetes.io/name: prayer-times
spec:
  selector:
    app.kubernetes.io/name: prayer-times
  ports:
    - name: http
      port: 80
      targetPort: http
