k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: adhan-route
spec:
  parentRefs:
    - name: web-gw
      namespace: default
  hostnames:
    - "adhan.shafi.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adhan-app
          port: 80
